--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="code-img" src="https://media.giphy.com/media/26n7b7PjSOZJwVCmY/giphy.gif" alt="code-img">
         
         <h3>Design and Development</h3>
-        <p class="code-skill-description">I started learning to code when I was 18 years old because I wanted to make my own video games and website. Now, I wanted to change the world.</p>
+        <p class="code-skill-description">I started learning to code when I was 18 years old because I wanted to make my own video games and website. Now, I want to change the world.</p>
       </div>
       <div class="skill-row">
         <img class="chillies-img" src="images/chillies.png" alt="chillies-img">
